chore: add repositories, mappers, and services for claim-related entities with initial implementation and accompanying test updates